--- a/styles.css
+++ b/styles.css
@@ -9,12 +9,9 @@ body {
 
 #christmas-tree-canvas {
     position: absolute;
-    bottom: 50px;
+    top: 50%;
     left: 50%;
-    transform: translateX(-50%) rotateY(0deg);
-    width: 300px;
-    height: 500px;
-    animation: rotateTree 20s linear infinite;
+    transform: translate(-50%, -50%);
 }
 
 #ornaments {
@@ -41,32 +38,6 @@ body {
     }
 }
 
-#tree-container {
-    position: absolute;
-    bottom: 50px;
-    left: 50%;
-    transform: translateX(-50%);
-    opacity: 0;
-    transition: opacity 2s ease-in-out, transform 2s ease-in-out;
-    transform-style: preserve-3d;
-}
-
-#tree-container.visible {
-    opacity: 1;
-    transform: translateX(-50%) rotateY(360deg);
-}
-
-/* 3D旋转动画 */
-@keyframes rotateTree {
-    from {
-        transform: translateX(-50%) rotateY(0deg);
-    }
-    to {
-        transform: translateX(-50%) rotateY(360deg);
-    }
-}
-
-/* 雪花样式 */
 #snowflakes {
     position: absolute;
     top: 0;
